# floem

./: Cargo.toml  README.md  rustc-ice-2024-03-20T03_51_22-93697.txt  todos.db
editor-core/src/: char_buffer.rs
editor-core/src/buffer/: mod.rs  rope_text.rs
examples/counter-simple/src/: main.rs
examples/counter/src/: main.rs
examples/editor/src/: main.rs
examples/file-drop/: Cargo.toml
examples/file-drop/src/: main.rs
examples/flight_booker/src/: main.rs
examples/syntax-editor/src/: main.rs
examples/tabbed-document-ui/: Cargo.toml
examples/tabbed-document-ui/src/: config.rs  main.rs
examples/todo-complex/: Cargo.toml
examples/todo-complex/src/: app_config.rs  main.rs  todo.rs  todo_state.rs
examples/view-transition/src/: main.rs  music_player.rs
examples/widget-gallery/src/: form.rs  (+6 more)
macros/src/: lib.rs
reactive/src/: context.rs  id.rs  memo.rs  runtime.rs  scope.rs  signal.rs
renderer/: Cargo.toml
renderer/src/: lib.rs
src/: animate.rs  app.rs  app_handle.rs  context.rs  event.rs  id.rs  inspector.rs  lib.rs  renderer.rs  style.rs  theme.rs  update.rs  view.rs  view_data.rs  view_tuple.rs  window_handle.rs
src/animate/: animation.rs
src/views/: checkbox.rs  clip.rs  container.rs  container_box.rs  decorator.rs  dropdown.rs  empty.rs  img.rs  label.rs  list.rs  rich_text.rs  scroll.rs  slider.rs  stack.rs  svg.rs  tab.rs  text_editor.rs  text_input.rs  toggle_button.rs  virtual_list.rs  window_drag_area.rs
src/widgets/: dropdown.rs  mod.rs  slider.rs  text_input.rs
tiny_skia/src/: lib.rs
vger/: Cargo.toml
vger/src/: lib.rs
(+13 files in other folders)
