[package]
name = "floem_renderer"
version.workspace = true
edition = "2021"
repository = "https://github.com/lapce/floem"
description = "A native Rust UI library with fine-grained reactivity"
license.workspace = true

[dependencies]
peniko = { workspace = true }
image = { workspace = true }
resvg = { workspace = true }

vello = "0.1.0"
floem-cosmic-text = { path = "../../cosmic-text" }
