[package]
name = "todo-complex"
version = "0.1.0"
edition = "2021"

[dependencies]
confy = "0.6.1"
floem = { path = "../..", features = ["serde", "vello"], default-features = false }
im.workspace = true
rusqlite = "0.32.1"
serde = {workspace = true}
# serde = { version = "1.0.210", features = ["derive"] }
